syntax = "proto3";

package com.epam.stups.services;

option java_package = "com.epam.stups.services";
option java_multiple_files = true;

service SimpleService{
    rpc getSimpleMessage(SimpleRequest) returns (SimpleResponse);
}

message SimpleRequest{
	string text = 1;
}

message SimpleResponse{
	string text = 1;
}